fix desktop form

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
       </div>
       <form action="">
-        <label for="name">Ваше имя</label>
+        <label for="name">Ваше <span style="color: #428A60">имя</span></label>
         <input type="text" id="name">
-        <label for="phone">Ваш телефон</label>
+        <label for="phone">Ваш <span style="color: #428A60">телефон</span></label>
         <input id="phone" name="phone" type="tel">
         <input type="submit" value="Заказать">
       </form>
