remove jquery dropdown

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
           <input type="text" id="name">
           <label class="reduslim-form__phone" for="phone">Ваш <span style="color: #428A60">телефон</span></label>
           <input id="phone" name="phone" type="tel">
+          <select class="reduslim-form__country-selector">
+            <option>Пункт 1</option>
+            <option>Пункт 2</option>
+          </select>
           <input type="submit" value="Заказать">
         </form>
       </div>
